# CC_research

./: .dockerignore  .gitignore  .graphifyignore  PLAN.md  RAASA_Evaluation_Report.md  README.md  REPRODUCIBILITY.md  analyze_latest.py  bootstrap_aws.sh  build_paper_folder.ps1  evaluation_report_aws_friendly  future_implementation.md  generate_paper_figures.py  pyproject.toml  raasa_extraordinary_roadmap.html  requirements.txt  run_aws_experiments.sh  test_metrics_api.py
OneDrive/Desktop/CC/CC_research/: .gitignore  Implementation plan review.txt  RAASA_Evaluation_Report.md  REPRODUCIBILITY.md  audit_all.jsonl  bootstrap_aws.sh  chat.txt  chat_1.txt  compute_means.py  evaluation_report_latest_23rd_april  execution_results.json  future_implementation.md  main.py  patch_and_deploy.sh  pyproject.toml  pytest.ini  raasa-key-1.pem  requirements.txt  run_20260418T052007Z.summary.json  run_20260418T052540Z.summary.json  run_20260418T052737Z.summary.json  run_20260418T052920Z.summary.json  run_20260418T061501Z.summary.json  run_20260418T063304Z.summary.json  run_20260418T063526Z.summary.json  run_aws_experiments.sh  run_aws_k8s_baseline_L1_r1.jsonl  run_aws_k8s_baseline_L1_r1.summary.json  run_aws_k8s_baseline_L3_r1.summary.json  run_aws_k8s_small_linear_r1.jsonl  run_aws_k8s_small_linear_r1.summary.json  run_live-small-probe.summary.json  run_medium_raasa_tuned_r1.summary.json  run_small_tuned_raasa_ml_r1.summary.json  sync.tar
OneDrive/Desktop/CC/CC_research/AWS_Results_26_april/: AWS_Live_Instance_Validation_2026_04_26.md  AWS_Phase0_Evaluation_Report.md  AWS_Phase1B_Blast_Radius_Report_2026_04_26.md  AWS_Phase1C_Pod_Specific_Enforcement_Report_2026_04_26.md  AWS_Phase1D_Universal_Resolution_Report_2026_04_26.md  AWS_Phase1_Ablation_Report_2026_04_26.md  AWS_Phase1_Development_Direction_2026_04_26.md  Progress_Tracker.md  RAASA_Evolution_and_Achievements.md  baseline_audit.jsonl  decision_record_2026_05_12_free_tier_realism.md  model.joblib  test_results.txt  train_model.py
OneDrive/Desktop/CC/CC_research/AWS_Results_Data/: experiment_manifest.jsonl  (+27 more)
(+1337 files in other folders)
